--- a/aula2.html
+++ b/aula2.html
@@ -9,26 +9,29 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <div>
-        <h1 class="tag titulo">Novas TAGs HTML</h1>
-        <section class="tag">
-            <p>
-                <h2>Estou dentro de uma SECTION</h2>
+    <div class="container">
+        <h1 class="title">Novas TAGs HTML</h1>
+        <section class="text-section text-section-left">
+            <p class="text-inside-section">
+                <h2 class="section-title">Estou dentro de uma SECTION</h2>
+                <img src="img/imagem1.jpg" alt="Imagem 1" title="Texto do title da imagem 1">
                 <b>Lorem ipsum dolor sit amet consectetur, <i>adipisicing</i> elit.</b>
                 Commodi excepturi sint quae eaque qui aperiam officia aliquam
                 quod veniam adipisci nulla, incidunt ut deserunt blanditiis rerum.
                 Quisquam vitae sequi voluptatem.
             </p>
         </section>
-        <section>
+        <section class="text-section text-section-right">
             <p>
-                <h2>Estou dentro de uma SECTION</h2>
+                <h2 class="section-title">Estou dentro de uma SECTION</h2>
+                <img src="img/imagem2.jpg" alt="Imagem 2" title="Texto do title da imagem 2">
                 <strong>Lorem ipsum dolor</strong> sit amet consectetur, adipisicing elit.
                 Commodi excepturi sint quae eaque qui aperiam officia aliquam
                 quod veniam adipisci nulla, incidunt ut deserunt blanditiis rerum.
                 Quisquam vitae sequi voluptatem.
             </p>
         </section>
+        <div class="clear"></div>
     </div>
 </body>
 </html>
