Trabalhando com links e formulários

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Página Inicial</title>
+    <title>Sobre nós</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
     <script src="main.js"></script>
 </head>
+
 <body>
     <div class="container">
-        <h1 class="title">Novas TAGs HTML - Página Principal</h1>
-        <section class="text-section text-section-left">
+        <h1 class="title">Novas TAGs HTML - Página Sobre nós</h1>
+        <section class="about-us">
             <h2 class="section-title">Estou dentro de uma SECTION</h2>
             <div class="img-paragraph">
                 <img src="img/imagem1.jpg" alt="Imagem 1" title="Texto do title da imagem 1">
@@ -23,19 +25,6 @@
                 Quisquam vitae sequi voluptatem.
             </p>
         </section>
-        <section class="text-section text-section-right">
-            <h2 class="section-title">Estou dentro de uma SECTION</h2>
-            <div class="img-paragraph">
-                <img src="img/imagem2.jpg" alt="Imagem 2" title="Texto do title da imagem 2">
-            </div>
-            <p>
-                <strong>Lorem ipsum dolor</strong> sit amet consectetur, adipisicing elit.
-                Commodi excepturi sint quae eaque qui aperiam officia aliquam
-                quod veniam adipisci nulla, incidunt ut deserunt blanditiis rerum.
-                Quisquam vitae sequi voluptatem.
-            </p>
-        </section>
-        <div class="clear"></div>
         <footer>
             <ul>
                 <li><a href="aula2.html">Home</a></li>
@@ -45,4 +34,5 @@
         </footer>
     </div>
 </body>
+
 </html>
