Trabalhando com o Twitter Bootstrap

--- a/projeto_bootstrap/index.html
+++ b/projeto_bootstrap/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/custom.css">
     <title>Usando Twitter Boostrap</title>
 </head>
 <body>
@@ -42,24 +43,84 @@
             </form>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mg-top">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1>Meu site super foda!!!!</h1>
+                <h1 class="display-4 text-center">Meu site super foda!!!!</h1>
+                <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Inventore laboriosam, 
+                    esse sint voluptates delectus dolorum eveniet rerum maxime placeat vel iure nemo cum,
+                    animi temporibus aperiam suscipit vitae, ea commodi.
+                </p>
             </div>
         </div>
         <div class="row">
-            <div class="col-3">
-                <h1>Coluna 1</h1>
+            <div class="col-3 card">
+                <img src="img/image1.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5>Coluna 1</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis nesciunt quas qui nihil officia veritatis. 
+                        Perspiciatis odit suscipit deleniti, tempora incidunt vel 
+                        voluptates molestiae iure officia! Ipsum voluptatibus praesentium molestias?
+                    </p>
+                    <a href="" class="btn btn-primary">Saiba mais</a>
+                </div>
             </div>
-            <div class="col-3">
-                <h1>Coluna 2</h1>
+            <div class="col-3 card">
+                <img src="img/image1.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5>Coluna 2</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis nesciunt quas qui nihil officia veritatis. 
+                        Perspiciatis odit suscipit deleniti, tempora incidunt vel 
+                        voluptates molestiae iure officia! Ipsum voluptatibus praesentium molestias?
+                    </p>
+                    <a href="" class="btn btn-primary">Saiba mais</a>
+                </div>
             </div>
-            <div class="col-3">
-                <h1>Coluna 3</h1>
+            <div class="col-3 card">
+                <img src="img/image1.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5>Coluna 3</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis nesciunt quas qui nihil officia veritatis. 
+                        Perspiciatis odit suscipit deleniti, tempora incidunt vel 
+                        voluptates molestiae iure officia! Ipsum voluptatibus praesentium molestias?
+                    </p>
+                    <a href="" class="btn btn-primary">Saiba mais</a>
+                </div>
             </div>
-            <div class="col-3">
-                <h1>Coluna 4</h1>
+            <div class="col-3 card">
+                <img src="img/image1.jpg" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5>Coluna 4</h5>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Perspiciatis nesciunt quas qui nihil officia veritatis. 
+                        Perspiciatis odit suscipit deleniti, tempora incidunt vel 
+                        voluptates molestiae iure officia! Ipsum voluptatibus praesentium molestias?
+                    </p>
+                    <a href="" class="btn btn-primary">Saiba mais</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <h1>6 colunas</h1>
+            </div>
+            <div class="col-6">
+                <h1>6 colunas</h1>
+                <div class="row">
+                    <div class="col-3">
+                        <h2>col-3</h2>
+                    </div>
+                    <div class="col-3">
+                        <h2>col-3</h2>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
