--- a/projeto_bootstrap/index.html
+++ b/projeto_bootstrap/index.html
@@ -103,8 +103,29 @@
                         Perspiciatis odit suscipit deleniti, tempora incidunt vel 
                         voluptates molestiae iure officia! Ipsum voluptatibus praesentium molestias?
                     </p>
-                    <a href="" class="btn btn-primary">Saiba mais</a>
+                    <a href="" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Saiba mais</a>
                 </div>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Mais informações</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                Meu conteúdo super foda do Card 4
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Fim modal -->
             </div>
         </div>
         <div class="row">
@@ -124,6 +145,10 @@
             </div>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    
+    <!--<script src="js/jquery-3.4.1.min.js"></script>--> <!-- Para esta forma funcionar é preciso baixar o jQuery -->
     <script src="js/bootstrap.js"></script>
 </body>
 </html>
